syntax = "proto3";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string response = 1;
}

service HelloWorld {
  rpc hello(HelloRequest) returns (HelloResponse) {}
}
